--- a/index.html
+++ b/index.html
@@ -451,13 +451,6 @@
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	  <script>
-	  	$('.navbar-collapse .navbar-nav > .nav-item > .nav-link').click(function(){
-	    $('.collapse.show').removeClass('show').css('height', '0');
-	    });
-	  	$('#btn-send').click(function() {
-	  		alert("Your message has been seen. We will contact you as soon as possible !");
-	  	});
-	  </script>
+	  <script src="script.js></script>
 	</body>
 </html>
